# MealPlanner

./: .gitignore  ConvertDF2CSV.py  GetSheetsData.py  Hueristic.py  MealClass.py  PairMealsAndAssignDays.py  PrintCalendarToTerminal.py  README.md  WeeklyPlan2Groceries.py  data_importer.py  database.py  justTesting.py  main.py  pyproject.toml  recipe.py  schema.sql
Utils/: Sheets_communicator.py
client/src/: App.js
client/src/pages/: GroceryLists.js  MealPlans.js
meal_planner/: unit_tests.py
meal_planner/database/: models.py
meal_planner/services/: WeeklyPlan2Groceries.py
server/: main.py
server/database/: crud.py  data_importer.py  database.py  models.py  schemas.py
server/services/: Hueristic.py  WeeklyPlan2Groceries.py  unit_tests.py
src/components/: NavBar.js
src/meal_planner/: main.py
src/meal_planner/database/: db.py  models.py  nutritional_data.py  schemas.py
src/meal_planner/services/: WeeklyPlan2Groceries.py
src/pages/: Home.js  Recipes.js
src/tests/: unit_tests.py
