[tool.poetry]
name = "meal-planner"
version = "0.1.0"
description = "Backend for Jump To Recipe web application. Create your own recipes and or add existing recipes to your cookbook. Mindful meal plans can then be generated according to dietary concerns, financial budget, etc"
authors = ["Devin Beckwith"]
readme = "README.md"
packages = [{include = "meal_planner"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
SQLAlchemy = "^2.0.35"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
